add first and last names

--- a/PA6.qmd
+++ b/PA6.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Practice Activity 6"
+author: Alex Sullivan, Megan Kerner, Isabelle Phraner
 format: html
 editor: visual
 self-contained: true
